--- a/view/AcademiaPanel.html
+++ b/view/AcademiaPanel.html
@@ -4,50 +4,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/panel.css">
 
     <title>Panel</title>
+    <style>
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            padding: 12px 16px;
+            z-index: 1;
+            cursor: pointer;
+        }
+        
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+    </style>
 </head>
 
 <body>
 
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light  bg-dark">
+            <img src="./Resources/Logo1.png" width="10%" height="10%" alt="error" loading="lazy">
+            <div class="collapse navbar-collapse ml-3" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active ">
+                        <a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active ">
+                        <a class="nav-link text-light" href="#">Crear clase <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-    <div class="card w-75 mx-auto mt-5" style="height: 850px;">
-        <div class="card-header text-center">
-            <div class="input-group mb-2 w-50 mx-auto">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor"
-                            xmlns="http://www.w3.org/2000/svg">
+        <div class="card w-75 mx-auto mt-5" style="min-height: 850px; padding-bottom: 60px;">
+            <div class="card-header text-center">
+                <div class="input-group mb-2 w-50 mx-auto">
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
                                 d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
                             <path fill-rule="evenodd"
                                 d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
                         </svg>
+                        </div>
                     </div>
+                    <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="buscar clase">
                 </div>
-                <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="buscar clase">
             </div>
-        </div>
-        <div class="card-body">
-            card
-        </div>
-    </div>
+            <div id="AllClass">
+                <div id="row-1" class="row ml-1 mr-1 mt-5">
 
-</body>
+                </div>
+            </div>
+            <script>
+                function CreateCard(clase) {
+                    card = "\
+                <div class='col'> \
+                <div class='card'> \
+                    <div class='card-header text-center'>\
+                        <div class='d-flex justify-content-between'>\
+                            <div class='bd-highlight'></div>\
+                            <div class='bd-highlight'>" + clase + "</div>\
+                            <div class='bd-highlight'>\
+                            <div class = 'dropdown'>\
+                                <span class='fas fa-bars'><svg width='1em' height='1em' viewBox='0 0 16 16' class='bi bi-caret-down-fill' fill='currentColor' xmlns='http://www.w3.org/2000/svg'>\
+                                    <path d='M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/>\
+                                </svg>\
+                                <div class='dropdown-content'>\
+                                <p>\
+                                Editar\
+                                </p>\
+                                <p>\
+                                Eliminar\
+                                </p>\
+                                </span>\
+                                </div>\
+                            </div>\
+                            </div>\
+                        </div>\
+                    </div>\
+                    <div class='card-body'>\
+                        <p class='card-text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>\
+                        <div id='horario' class='overflow' style='height: 180px;'>\
+                            <samp>horario 1</samp> <br>\
+                            <samp>horario 1</samp> <br>\
+                            <samp>horario 1</samp> <br>\
+                            <samp>horario 1</samp><br>\
+                            <samp>horario 1</samp><br>\
+                            <samp>horario 1</samp><br>\
+                            <samp>horario 1</samp><br>\
+                            <samp>horario 1</samp><br>\
+                        </div>\
+                    </div>\
+                </div>\
+            </div>";
+                    return card;
+                }
+                fetch("https://localhost:5001/api/academia")
+                    .then(response => response.json())
+                    .then(json => {
+                        let row = 1;
+                        let index = 0;
+                        json.data.forEach(element => {
+                            if (index % 3 == 0 && index != 0) {
+                                row++;
+                                document.getElementById("AllClass").innerHTML += "<div id='row-" + row + "' class='row ml-1 mr-1 mt-5'></div>";
+                            }
+                            document.getElementById("row-" + row).innerHTML += CreateCard(element.nombre)
+                            index++;
+                        });
+                    });
+            </script>
+    </body>
 
 </html>
