--- a/view/AddClass.html
+++ b/view/AddClass.html
@@ -51,20 +51,20 @@
                 <div class="row mt-3">
                     <div class="col">
                         <label>Aula</label>
-                        <input type="text" class="form-control" placeholder="First name">
+                        <input type="text" class="form-control" id="aula" placeholder="Nombre del aula">
                     </div>
                     <div class="col">
                         <label>Alumnos maximos</label>
-                        <input type="number" min="1" class="form-control" placeholder="Last name">
+                        <input type="number" min="1" id="alumnos" class="form-control" placeholder="Numero de alumnos">
                     </div>
                 </div>
                 <div class="form-group mt-3">
                     <label for="inputAddress">Tipo</label>
                     <select class="form-control" name="Tipos" id="Tipo">
-                        <option value="volvo">Ballet</option>
-                        <option value="saab">Zumba</option>
-                        <option value="mercedes">Salsa</option>
-                        <option value="audi">Cumbia</option>
+                        <option value=1 > Ballet</option>
+                        <option value=2 > Zumba</option>
+                        <option value=3 > Salsa</option>
+                        <option value=4 > Cumbia</option>
                       </select>
                 </div>
                 <h4 class="mt-3 ml-2"> Horarios:</h4>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="row mt-5">
                     <div class="col">
-                        <input type="submit" class="form-control btn btn-success" value="Guardar">
+                        <input type="button" id="guardar" class="form-control btn btn-success" value="Guardar">
                     </div>
                     <div class="col">
                         <input type="submit" class="form-control btn btn-danger" value="Cancelar">
