--- a/view/Login.html
+++ b/view/Login.html
@@ -11,27 +11,28 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
     <style>
         body {
             background-color: #f08621;
         }
+        
         .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             border-radius: 2em;
             transition: 0.3s;
             width: 40%;
-            }
-
+        }
+        
         .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-            }
-
-            .ClaseBoton:not(:hover){
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        }
+        
+        .ClaseBoton:not(:hover) {
             cursor: pointer;
             border-radius: 5em;
             color: #fff;
-            background: 
-            linear-gradient(to right, #000000, #333333 );
+            background: linear-gradient(to right, #000000, #333333);
             border: 0;
             padding-left: 40px;
             padding-right: 40px;
@@ -41,13 +42,12 @@
             font-size: 13px;
             box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
         }
-
-        .ClaseBoton:hover{
+        
+        .ClaseBoton:hover {
             cursor: pointer;
             border-radius: 5em;
             color: #fff;
-            background: 
-            linear-gradient(to right, #000000, #333333 );
+            background: linear-gradient(to right, #000000, #333333);
             border: 0;
             padding-left: 40px;
             padding-right: 40px;
@@ -57,7 +57,6 @@
             font-size: 13px;
             box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
         }
-
     </style>
 </head>
 
@@ -89,18 +88,18 @@
                 <div class="card-body mx-auto">
                     <h2 class="text-center">Inicio de sesión</h2><br>
                     <form action="" class="login-form">
-                        
+
                         <div class="form-group">
                             <label class="text-uppercase">Usuario</label>
-                            <input type="text" class="form-control" placeholder="Usuario" required>
+                            <input type="text" id="Correo" class="form-control" placeholder="Usuario" required>
                         </div>
 
                         <div class="form-group">
                             <label class="text-uppercase">Contraseña</label>
-                            <input type="password" class="form-control" placeholder="Contraseña" required>
+                            <input type="password" id="Password" class="form-control" placeholder="Contraseña" required>
                         </div>
                         <div class="col mt-4">
-                            <input type="submit" class="ClaseBoton form-control wt-4" value="Iniciar sesión"></input>
+                            <input type="button" id="Register" class="ClaseBoton form-control wt-4" value="Iniciar sesión"></input>
                         </div>
                         <div class="col mt-3">
                             <a href="Register.html" class="ClaseBoton form-control wt-4">Crear cuenta nueva</a>
@@ -124,16 +123,15 @@
                     </div>
                 </div>
 
-                <div class="text-light" >
+                <div class="text-light">
                     <h2>¡La vida es mejor bailando!</h2>
                     <p>
-                        Utiliza nuestra API especialmente diseñada para la ubicar lugares donde puedas aprender a bailar.
-                        encontraras eventos cerca de ti y compartir tu opinión acerca de él.
+                        Utiliza nuestra API especialmente diseñada para la ubicar lugares donde puedas aprender a bailar. encontraras eventos cerca de ti y compartir tu opinión acerca de él.
                     </p>
                 </div>
 
             </div>
         </div>
     </div>
-
+    <script src="./js/Login.js"></script>
 </body>
