--- a/view/RegisterAcademia_Class.html
+++ b/view/RegisterAcademia_Class.html
@@ -15,13 +15,12 @@
         body {
             background-color: #f08621;
         }
-
-        .ClaseBoton:not(:hover){
+        
+        .ClaseBoton:not(:hover) {
             cursor: pointer;
             border-radius: 5em;
             color: #fff;
-            background: 
-            linear-gradient(to right, #000000, #333333 );
+            background: linear-gradient(to right, #000000, #333333);
             border: 0;
             padding-left: 40px;
             padding-right: 40px;
@@ -31,8 +30,8 @@
             font-size: 13px;
             box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
         }
-
-        .ClaseBoton:hover{
+        
+        .ClaseBoton:hover {
             border-radius: 20px;
             border: 2px solid #353535;
             background-color: #f08621;
@@ -44,13 +43,12 @@
             text-transform: uppercase;
             transition: transform 80ms ease-in;
         }
-
-        .btn-Tag:not(:hover){
+        
+        .btn-Tag:not(:hover) {
             cursor: pointer;
             border-radius: 5em;
             color: #fff;
-            background: 
-            linear-gradient(to right, #000000, #333333 );
+            background: linear-gradient(to right, #000000, #333333);
             border: 0;
             padding-left: 40px;
             padding-right: 40px;
@@ -60,13 +58,12 @@
             font-size: 13px;
             box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
         }
-
-        .btn-Tag:hover{
+        
+        .btn-Tag:hover {
             cursor: pointer;
             border-radius: 5em;
             color: #fff;
-            background: 
-            linear-gradient(to right, #000000, #333333 );
+            background: linear-gradient(to right, #000000, #333333);
             border: 0;
             padding-left: 40px;
             padding-right: 40px;
@@ -76,153 +73,152 @@
             font-size: 13px;
             box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
         }
-
+        
         .field {
-            display:flex;
-            position:realtive;
-            margin:5em auto;
-            width:70%;
-            flex-direction:row;
-            box-shadow:
-            1px 1px 0 #be5e04,
-            2px 2px 0 #be5e04,
-            3px 3px 0 #be5e04,
-            4px 4px 0 #be5e04,
-            5px 5px 0 #be5e04,
-            6px 6px 0 #be5e04,
-            7px 7px 0 #be5e04
-            ;
-            }
-
+            display: flex;
+            position: realtive;
+            margin: 5em auto;
+            width: 70%;
+            flex-direction: row;
+            box-shadow: 1px 1px 0 #be5e04, 2px 2px 0 #be5e04, 3px 3px 0 #be5e04, 4px 4px 0 #be5e04, 5px 5px 0 #be5e04, 6px 6px 0 #be5e04, 7px 7px 0 #be5e04;
+        }
+        
         .field>input[type=text],
         .field>button {
-            display:block;
-            font:1.2em 'Carlos Lopez';
-            }
-
+            display: block;
+            font: 1.2em 'Carlos Lopez';
+        }
+        
         .field>input[type=text] {
-            flex:1;
-            padding:0.6em;
-            border:0.2em solid #f08621;
-            }
-
+            flex: 1;
+            padding: 0.6em;
+            border: 0.2em solid #f08621;
+        }
+        
         .field>button {
-            padding:0.6em 0.8em;
-            background-color:#f08621;
-            color:white;
-            border:none;
-            }
-
+            padding: 0.6em 0.8em;
+            background-color: #f08621;
+            color: white;
+            border: none;
+        }
+        
         .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             border-radius: 2em;
             transition: 0.3s;
             width: 40%;
-            }
-
+        }
+        
         .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-            }
-
-            .cardClass {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        }
+        
+        .cardClass {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             border-radius: 2em;
             transition: 0.3s;
             width: 40%;
-            }
-
+        }
+        
         .cardClass:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
             border-radius: 3em;
-            }
-
+        }
+        
         .container {
             padding: 2px 16px;
-            }
-
+        }
+        
         .checkbox-input {
-        display: none;
+            display: none;
         }
-
-        .checkbox-label, .checkbox-text, .checkbox-text--description {
-        -webkit-transition: all 0.4s ease;
-        transition: all 0.4s ease;
-        }
-
-        .checkbox-label {
-        display: inline-block;
-        vertical-align: top;
-        position: relative;
-        width: 100%;
-        padding: 30px 60px;
-        cursor: pointer;
-        font-size: 24px;
-        font-weight: 400;
-        margin: 16px 0;
-        border: 1px solid #d9d9d9;
-        border-radius: 2px;
-        box-shadow: inset 0 0 0 0 #505050;
-        }
-        .checkbox-label:before {
-        content: "";
-        position: absolute;
-        top: 75%;
-        right: 16px;
-        width: 40px;
-        height: 40px;
-        opacity: 0;
-        background-color: #505050;
-        background-image: url(http://lorenzodianni.io/codepen/icon/done--white.svg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 24px;
-        border-radius: 50%;
-        -webkit-transform: translate(0%, -50%);
-        transform: translate(0%, -50%);
-        -webkit-transition: all 0.4s ease;
-        transition: all 0.4s ease;
-        }
-
-        .checkbox-text--title {
-        font-weight: 500;
-        }
+        
+        .checkbox-label,
+        .checkbox-text,
         .checkbox-text--description {
-        font-size: 14px;
-        margin-top: 16px;
-        padding-top: 16px;
-        border-top: 1px solid #505050;
+            -webkit-transition: all 0.4s ease;
+            transition: all 0.4s ease;
         }
-        .checkbox-text--description .un {
-        display: none;
-        }
-
-        .checkbox-input:checked + .checkbox-label {
-        border-color: #505050;
-        box-shadow: inset 0 -12px 0 0 #505050;
-        }
-        .checkbox-input:checked + .checkbox-label:before {
-        top: 0;
-        opacity: 1;
-        }
-        .checkbox-input:checked + .checkbox-label .checkbox-text {
-        -webkit-transform: translate(0, -8px);
-        transform: translate(0, -8px);
-        }
-        .checkbox-input:checked + .checkbox-label .checkbox-text--description {
-        border-color: #d9d9d9;
-        }
-        .checkbox-input:checked + .checkbox-label .checkbox-text--description .un {
-        display: inline-block;
-        }
-
-        @media screen and (min-width: 430px) {
+        
         .checkbox-label {
-            width: 300px;
-            margin: 16px;
+            display: inline-block;
+            vertical-align: top;
+            position: relative;
+            width: 100%;
+            padding: 30px 60px;
+            cursor: pointer;
+            font-size: 24px;
+            font-weight: 400;
+            margin: 16px 0;
+            border: 1px solid #d9d9d9;
+            border-radius: 2px;
+            box-shadow: inset 0 0 0 0 #505050;
         }
+        
+        .checkbox-label:before {
+            content: "";
+            position: absolute;
+            top: 75%;
+            right: 16px;
+            width: 40px;
+            height: 40px;
+            opacity: 0;
+            background-color: #505050;
+            background-image: url(http://lorenzodianni.io/codepen/icon/done--white.svg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 24px;
+            border-radius: 50%;
+            -webkit-transform: translate(0%, -50%);
+            transform: translate(0%, -50%);
+            -webkit-transition: all 0.4s ease;
+            transition: all 0.4s ease;
         }
-
-
+        
+        .checkbox-text--title {
+            font-weight: 500;
+        }
+        
+        .checkbox-text--description {
+            font-size: 14px;
+            margin-top: 16px;
+            padding-top: 16px;
+            border-top: 1px solid #505050;
+        }
+        
+        .checkbox-text--description .un {
+            display: none;
+        }
+        
+        .checkbox-input:checked+.checkbox-label {
+            border-color: #505050;
+            box-shadow: inset 0 -12px 0 0 #505050;
+        }
+        
+        .checkbox-input:checked+.checkbox-label:before {
+            top: 0;
+            opacity: 1;
+        }
+        
+        .checkbox-input:checked+.checkbox-label .checkbox-text {
+            -webkit-transform: translate(0, -8px);
+            transform: translate(0, -8px);
+        }
+        
+        .checkbox-input:checked+.checkbox-label .checkbox-text--description {
+            border-color: #d9d9d9;
+        }
+        
+        .checkbox-input:checked+.checkbox-label .checkbox-text--description .un {
+            display: inline-block;
+        }
+        
+        @media screen and (min-width: 430px) {
+            .checkbox-label {
+                width: 300px;
+                margin: 16px;
+            }
+        }
     </style>
 </head>
 
@@ -258,10 +254,10 @@
                     <input type="text" id="searchterm" placeholder="Buscar clase" />
                     <button type="button" id="search">Search</button>
                 </div>
-              
+
                 <div class="row mt-4">
                     <div class="col">
-                        <input type="checkbox" name="baile" id="Bachata" class="checkbox-input"/>
+                        <input type="checkbox" name="baile" id="Bachata" class="checkbox-input" />
                         <label for="Bachata" class="checkbox-label">
                         <div class="checkbox-text">
                             <p class="checkbox-text--title">Bachata</p>
@@ -270,7 +266,7 @@
                         </label>
                     </div>
                     <div class="col">
-                        <input type="checkbox" name="baile" id="Valet" class="checkbox-input"/>
+                        <input type="checkbox" name="baile" id="Valet" class="checkbox-input" />
                         <label for="Valet" class="checkbox-label">
                         <div class="checkbox-text">
                             <p class="checkbox-text--title">Valet</p>
@@ -279,7 +275,7 @@
                         </label>
                     </div>
                     <div class="col">
-                        <input type="checkbox" name="baile" id="Zumba" class="checkbox-input"/>
+                        <input type="checkbox" name="baile" id="Zumba" class="checkbox-input" />
                         <label for="Zumba" class="checkbox-label">
                         <div class="checkbox-text">
                             <p class="checkbox-text--title">Zumba</p>
@@ -292,7 +288,7 @@
 
                 <div class="row mt-4">
                     <div class="col">
-                        <input type="checkbox" name="baile" id="Harana" class="checkbox-input"/>
+                        <input type="checkbox" name="baile" id="Harana" class="checkbox-input" />
                         <label for="Harana" class="checkbox-label">
                         <div class="checkbox-text">
                             <p class="checkbox-text--title">Harana</p>
@@ -301,7 +297,7 @@
                         </label>
                     </div>
                     <div class="col">
-                        <input type="checkbox" name="baile" id="Merengue" class="checkbox-input"/>
+                        <input type="checkbox" name="baile" id="Merengue" class="checkbox-input" />
                         <label for="Merengue" class="checkbox-label">
                         <div class="checkbox-text">
                             <p class="checkbox-text--title">Merengue</p>
@@ -310,7 +306,7 @@
                         </label>
                     </div>
                     <div class="col">
-                        <input type="checkbox" name="baile" id="Tango" class="checkbox-input"/>
+                        <input type="checkbox" name="baile" id="Tango" class="checkbox-input" />
                         <label for="Tango" class="checkbox-label">
                         <div class="checkbox-text">
                             <p class="checkbox-text--title">Tango</p>
@@ -319,19 +315,18 @@
                         </label>
                     </div>
                 </div>
-
                 <div class="row mt-4">
                     <div class="col">
-                        <input type="checkbox" name="baile" id="Cha-cha-cha" class="checkbox-input"/>
+                        <input type="checkbox" name="baile" id="Cha-cha-cha" class="checkbox-input" />
                         <label for="Cha-cha-cha" class="checkbox-label">
                         <div class="checkbox-text">
                             <p class="checkbox-text--title">Cha cha cha</p>
-                            <p class="checkbox-text--description">Click to <span class="un">un</span>check it!</p>
+                            <p class-text--description">Click to <span class="un">un</span>check it!</p>
                         </div>
                         </label>
                     </div>
                     <div class="col">
-                        <input type="checkbox" name="baile" id="Salsa" class="checkbox-input"/>
+                        <input type="checkbox" name="baile" id="Salsa" class="checkbox-input" />
                         <label for="Salsa" class="checkbox-label">
                         <div class="checkbox-text">
                             <p class="checkbox-text--title">Salsa</p>
@@ -340,7 +335,7 @@
                         </label>
                     </div>
                     <div class="col">
-                        <input type="checkbox" name="baile" id="Hip-hop" class="checkbox-input"/>
+                        <input type="checkbox" name="baile" id="Hip-hop" class="checkbox-input" />
                         <label for="Hip-hop" class="checkbox-label">
                         <div class="checkbox-text">
                             <p class="checkbox-text--title">Hip Hop</p>
@@ -349,10 +344,9 @@
                         </label>
                     </div>
                 </div>
-
-
                 <div class="row mt-5">
-                    <button type="submit" class="form-control w-4 ClaseBoton">Registrar</button>
+                    <!--button type="submit" class="form-control w-4 ClaseBoton">Registrar</button!-->
+                    <a href="AcademiaPanel.html" class="btn btn-success">Registrarse</a>
                 </div>
             </form>
         </div>
