--- a/view/RegisterStudent.html
+++ b/view/RegisterStudent.html
@@ -37,12 +37,11 @@
                 </div>
             </nav>
         </header>
-
-        <h1 class="text-light text-center">Registro de estudiante</h1>
-        <div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
+        <div class="card mx-auto mt-5">
             <div class="card-body">
+                <h1 class="text-center mt-4 mr-4 mr-4">Registro de estudiante</h1>
                 <form>
-                    <div class="row mt-3">
+                    <div class="row mt-4">
                         <div class="col ml-4 mr-4">
                             <h6><label>Nombre</label></h6>
                             <input type="text" class="form-control" id="name" placeholder="Nombre" required>
@@ -60,11 +59,12 @@
                         <h6><label>Contraseña nueva</label></h6>
                         <input type="password" class="form-control" id="password" placeholder="Contraseña nueva" required>
                     </div>
-                    <div class="row mt-3 ml-4 mr-4">
-                        <button type="submit" class="ClaseBoton" id="addStudent">Registrar</button>
-                        <a href="./Register.html" class="ClaseBoton">Cancelar</a>
-                    </div>
                 </form>
+                
+            </div>
+            <div class="card-body mx-auto">
+                <button type="submit" class="ClaseBoton">Registrarme</button>
+                <a href="Register.html" class="ClaseBoton">Volver</a>
             </div>
         </div>
         <script src="./js/RegisterStudent.js"></script>
