--- a/view/css/RegisterStudent.css
+++ b/view/css/RegisterStudent.css
@@ -15,7 +15,7 @@
     padding-bottom: 10px;
     padding-top: 10px;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 13px;
+    font-size: 12px;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
 }
 
@@ -37,7 +37,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 2em;
     transition: 0.3s;
-    width: 40%;
+    height: 28em;
     }
 
 .card:hover {
