--- a/view/RegisterStudent.html
+++ b/view/RegisterStudent.html
@@ -63,7 +63,7 @@
                 
             </div>
             <div class="card-body mx-auto">
-                <button type="submit" class="ClaseBoton">Registrarme</button>
+                <button type="submit" id="addStudent" class="ClaseBoton">Registrarme</button>
                 <a href="Register.html" class="ClaseBoton">Volver</a>
             </div>
         </div>
