--- a/view/css/panel.css
+++ b/view/css/panel.css
@@ -120,7 +120,7 @@ h4 {
     border-radius: 10px;
     margin-bottom: 30px;
     background-color: #fff;
-    box-shadow: 0 0.5em 1em 0 rgba(0,0,0,0.2);
+    box-shadow: 0 0.5em 1em 0 rgba(0, 0, 0, 0.568);
 }
 
 .social-links li a {
