--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -18,11 +18,11 @@
                             <label class="text-uppercase">Contraseña</label>
                             <input type="password" name="Password" id="Password" class="form-control" placeholder="Contraseña" required>
                         </div>
-                        <div class="col mt-4">
-                            <input type="submit" id="Register" class="ClaseBoton form-control wt-4" value="Iniciar sesión"></input>
+                        <div class="col ml-4" >
+                            <input type="submit" id="Register" class="btn-hover color-8" value="Iniciar sesión"></input>
                         </div>
-                        <div class="col mt-3">
-                            <a href="/links/type" class="ClaseBoton form-control wt-4">Crear cuenta nueva</a>
+                        <div class="col ml-4">
+                            <button class="btn-hover color-8"><a class=" text-light" href="/links/type">Cuenta nueva</a></button>
                         </div>
                     </form>
                 </div>
