--- a/src/views/links/AcademiaPanel.hbs
+++ b/src/views/links/AcademiaPanel.hbs
@@ -4,7 +4,7 @@
 
 <div class="content mt-5">
     <div class="container">
-        <div class="card">
+        <div>
             <div class="card-body">
                 <div class="row mt-4">
                     <div class="search mx-auto">
