--- a/src/public/css/type.css
+++ b/src/public/css/type.css
@@ -62,11 +62,11 @@ body {
 }
 
 .card:hover .card__background {
-    transform: scale(1.02) translateZ(0);
+    transform: scale(1) translateZ(0);
 }
 
 .card-grid:hover>.card:not(:hover) .card__background {
-    filter: brightness(0.5) saturate(0) contrast(1.2) blur(5px);
+    filter: brightness(0.5) saturate(1) contrast(1) blur(0.313em);
 }
 
 .card__content {
