--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -1,8 +1,4 @@
-
-
-
-
-<div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
+<div class="mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
         <div class="card-body min-vh-100">
             <form action="/links/add" method="POST">
                 <div class="row mt-3">
@@ -25,7 +21,7 @@
                       </select>
                 </div>
                 <h4 class="mt-3 ml-2"> Horarios:</h4>
-                <div class="card">
+                <div>
                     <div class="card-body" style="min-height: 400px;">
                         <table class="table">
                             <thead style="background: #f7f14a;">
