--- a/src/views/links/type.hbs
+++ b/src/views/links/type.hbs
@@ -1,14 +1,20 @@
 <head>
     <link rel="stylesheet" href="/css/type.css">
 </head>
-<body>
-        <h1 class="text-light text-center">!Bienvenido a GetDanceNow!</h1>
-    <h5 class="text-light text-center">Seleccione su tipo de registro</h5><br>
 
-    <section class="hero-section">
+<body>
+    <div class="mt-4">
+        <h1 class="text-light text-center">!Bienvenido a GetDanceNow!</h1><br>
+        <h5 class="text-light text-center">Seleccione su tipo de registro</h5>
+    </div>
+
+
+    <section class="hero-section mt-4">
         <div class="card-grid text-center">
             <a class="card text-center" href="#">
-                <div class="card__background" style="background-image: url(https://www.xtrafondos.com/wallpapers/resized/chica-anime-con-ojos-morados-con-tapabocas-5525.jpg?s=large)"></div>
+                <div class="card__background"
+                    style="background-image: url(https://images.hdqwalls.com/wallpapers/ballet-dancer-girl-road-4k-g2.jpg)">
+                </div>
                 <div class="card__content w-100">
                     <h3 class="card__heading">Estudiante</h3>
                     <p class="card__category">Podrás:</p><br>
@@ -18,7 +24,9 @@
             </a>
 
             <a class="card " href="/links/AcademySignup">
-                <div class="card__background" style="background-image: url(https://www.xtrafondos.com/wallpapers/resized/chica-anime-con-ojos-rojos-y-mascara-5526.jpg?s=large)"></div>
+                <div class="card__background"
+                    style="background-image: url(https://i.pinimg.com/originals/41/0f/e1/410fe17b7cf8bb315a32e15bc39836c3.jpg)">
+                </div>
                 <div class="card__content text-center w-100">
                     <h3 class="card__heading">Academia</h3><br>
                     <p class="card__category">Podrás:</p><br>
