--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -3,7 +3,7 @@
 </head>
 <div class="container mt-4">
         <div class="row">
-            <div class="card mx-auto" style="width: 30%; margin-bottom: 50px;">
+            <div class="mx-auto" style="width: 30%; margin-bottom: 50px;">
                 <div class="card-body mx-auto">
                     {{>Messages}}
                     <h2 class="text-center">Inicio de sesión</h2><br>
