--- a/src/views/links/type.hbs
+++ b/src/views/links/type.hbs
@@ -11,7 +11,7 @@
 
     <section class="hero-section mt-4">
         <div class="card-grid text-center">
-            <a class="card text-center" href="#">
+            <a class="card text-center" href="/links/StudentSignup">
                 <div class="card__background"
                     style="background-image: url(https://images.hdqwalls.com/wallpapers/ballet-dancer-girl-road-4k-g2.jpg)">
                 </div>
