Panel del estudiante

--- a/src/views/links/type.hbs
+++ b/src/views/links/type.hbs
@@ -23,7 +23,7 @@
                 </div>
             </a>
 
-            <a class="card " href="/links/AcademySignup">
+            <a class="card " href="#">
                 <div class="card__background"
                     style="background-image: url(https://i.pinimg.com/originals/41/0f/e1/410fe17b7cf8bb315a32e15bc39836c3.jpg)">
                 </div>
