--- a/src/views/links/StudentSignup.hbs
+++ b/src/views/links/StudentSignup.hbs
@@ -1,3 +1,4 @@
+{{> navigation}}
 <h1 class="text-light text-center mt-4">Registro del estudiante</h1>
 <div class="card-body mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
     <div>
