--- a/src/views/links/type.hbs
+++ b/src/views/links/type.hbs
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" href="/css/type.css">
 </head>
-
+{{> navigation}}
 <body>
     <div class="mt-4">
         <h1 class="text-light text-center">!Bienvenido a GetDanceNow!</h1><br>
