--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,4 +1,3 @@
-<!-- HEADER DEL LOGIN -->
 <header>
     <!-- MAIN HEADER -->
     <div id="header">
@@ -9,7 +8,7 @@
                 <!-- LOGO -->
                 <div class="col-md-12">
                     <div>
-                        <a href="#" class="logo">
+                        <a href="/signin" class="logo">
                             <img src="../Resources/logo.png" width="8%" height="8%" loading="lazy"
                                 alt="logo_GetDanceNow">
                         </a>
