--- a/src/views/links/EstudiantePanel.hbs
+++ b/src/views/links/EstudiantePanel.hbs
@@ -19,7 +19,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- /shop -->
+			<!-- /shop hello world! -->
 
 			<!-- shop -->
 			<div class="col-md-4 col-xs-6">
