--- a/src/views/partials/navStudent.hbs
+++ b/src/views/partials/navStudent.hbs
@@ -27,15 +27,20 @@
                     <div class="header-ctn ">
                         <!-- Wishlist -->
                         <div>
-                            <a href="#">
+                            <a href="/links/UpdateStudent">
                                 <i class="fa fa-user"></i>
                                 <span>Mi cuenta</span>
                             </a>
                         </div>
-
+                        <div>
+                            <a href="/links/DeleteStudent">
+                                <i class="fa fa-trash-o "></i>
+                                <span>Eliminar</span>
+                            </a>
+                        </div>
                         <!-- Mi cuenta -->
                         <div>
-                            <a href="#">
+                            <a href="/logout">
                                 <i class="fa fa-sign-out"></i>
                                 <span>Cerrar sesión</span>
                             </a>
