--- a/src/views/links/ClasesAll.hbs
+++ b/src/views/links/ClasesAll.hbs
@@ -27,19 +27,11 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <button class="btn btn-dark"><a class=" text-light"
-                                            href="/links/Inscripcion">Inscribirme</a></button>
-                                    <button class="btn btn-dark"><a class=" text-light"
-                                            href="/links/ClassInfo/{{clase.id}}">Ver info</a></button>
-
+                                    <button class="btn btn-dark"><a class=" text-light" href="/links/Inscripcion">Inscribirme</a></button>
+                                    <button class="btn btn-dark"><a class=" text-light" href="/links/ClassInfo/{{clase.id}}">Ver info</a></button>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    {{else}}
-                    <div class="mx-auto text-center">
-                        <p>La academia no cuenta con clases registradas, solicite una con el contacto de la academia.
-                        </p>
                     </div>
                     {{/each}}
                 </div>
