--- a/src/views/links/DeleteStudent.hbs
+++ b/src/views/links/DeleteStudent.hbs
@@ -2,28 +2,18 @@
 <h1 class="text-light text-center mt-4">Eliminar estudiante</h1>
 <div class="card-body mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
     <div>
-        <form method="POST" action="/links/StudentSignup">
+        <form method="POST" action="/links/DeleteStudent">
             <div class="row mt-4 ml-2">
                 <div class="col">
                     <h6><label>Nombre</label></h6>
-                    <input name="nombre" type="text" class="form-control" placeholder="Nombre"
-                        value="{{student.nombre}}">
+                    <input name="nombre" type="text" class="form-control"
+                        value="{{student.nombre}}" disabled>
                 </div>
                 <div class="col mr-4">
                     <h6><label>Apellidos</label></h6>
-                    <input name="apellidos" type="text" class="form-control" placeholder="Apellidos"
-                        value="{{student.apellidos}}">
+                    <input name="apellidos" type="text" class="form-control"
+                        value="{{student.apellido}}" disabled>
                 </div>
-            </div>
-            <div class="row mt-4 ml-4 mr-4">
-                <h6><label>Correo electrónico</label></h6>
-                <input name="correo" type="text" class="form-control" placeholder="Correo electrónico"
-                    value="{{student.correo}}">
-            </div>
-            <div class="row mt-4 ml-4 mr-4">
-                <h6><label>Contraseña nueva</label></h6>
-                <input name="password" type="text" class="form-control" placeholder="Contraseña nueva"
-                    value="{{student.password}}">
             </div>
 
             <div class="row mt-3 ml-4">
@@ -55,7 +45,8 @@
                         </div>
                     </div>
                 </div>
-                <button class="btn-hover color-1"><a class=" text-light" href="/links/PanelEstudiante">Cancelar</a></button>
+                <button class="btn-hover color-1"><a class=" text-light"
+                        href="/links/PanelEstudiante">Cancelar</a></button>
             </div>
         </form>
     </div>
