--- a/src/views/partials/navStudent.hbs
+++ b/src/views/partials/navStudent.hbs
@@ -27,13 +27,13 @@
                     <div class="header-ctn ">
                         <!-- Wishlist -->
                         <div>
-                            <a href="/links/UpdateStudent">
+                            <a href="/links/UpdateStudent/">
                                 <i class="fa fa-user"></i>
                                 <span>Mi cuenta</span>
                             </a>
                         </div>
                         <div>
-                            <a href="/links/DeleteStudent">
+                            <a href="/links/DeleteStudent/">
                                 <i class="fa fa-trash-o "></i>
                                 <span>Eliminar</span>
                             </a>
