--- a/src/views/links/EstudiantePanel.hbs
+++ b/src/views/links/EstudiantePanel.hbs
@@ -43,7 +43,7 @@
 					</div>
 					<div class="shop-body">
 						<h3>Clases</h3>
-						<a href="/links/Clases" class="cta-btn">Ir ahora <i class="fa fa-arrow-circle-right"></i></a>
+						<a href="/links/ClasesAll" class="cta-btn">Ir ahora <i class="fa fa-arrow-circle-right"></i></a>
 					</div>
 				</div>
 			</div>
