--- a/src/views/links/UpdateStudent.hbs
+++ b/src/views/links/UpdateStudent.hbs
@@ -1,30 +1,26 @@
 {{> navStudent}}
 <h1 class="text-light text-center mt-4">Actualizar datos del estudiante</h1>
 <div class="card-body mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
+
     <div>
         <form method="POST" action="/links/UpdateStudent">
             <div class="row mt-4 ml-2">
+
                 <div class="col">
                     <h6><label>Nombre</label></h6>
                     <input name="nombre" type="text" class="form-control" value="{{student.nombre}}">
                 </div>
                 <div class="col mr-4">
                     <h6><label>Apellidos</label></h6>
-                    <input name="apellidos" type="text" class="form-control" placeholder="Apellidos" value="{{Student.apellidos}}">
+                    <input name="apellido" type="text" class="form-control" value="{{student.apellido}}">
                 </div>
             </div>
-            <div class="row mt-4 ml-4 mr-4">
-                <h6><label>Correo electrónico</label></h6>
-                <input name="correo" type="text" class="form-control" placeholder="Correo electrónico" value="{{Student.correo}}">
-            </div>
-            <div class="row mt-4 ml-4 mr-4">
-                <h6><label>Contraseña nueva</label></h6>
-                <input name="password" type="text" class="form-control" placeholder="Contraseña nueva" value="{{Student.password}}">
-            </div>
             <div class="row mt-3 ml-4">
-                <input type="submit" name="Update" id="Update"  class="btn-hover color-8" value="Actualizar">
-                <button class="btn-hover color-8"><a class=" text-light" href="/links/PanelEstudiante">Cancelar</a></button>
+                <input type="submit" name="Update" id="Update" class="btn-hover color-8" value="Actualizar">
+                <button class="btn-hover color-8"><a class=" text-light"
+                        href="/links/PanelEstudiante">Cancelar</a></button>
             </div>
         </form>
     </div>
+
 </div>
