--- a/src/views/links/AcademiasAll.hbs
+++ b/src/views/links/AcademiasAll.hbs
@@ -19,7 +19,7 @@
                                             data-toggle="tooltip" class="tooltips" href="/links/Clases/{{id}} "
                                             data-original-title="Ver"><i class="fa fa-eye"></i></a></li>
                                     <li class="list-inline-item"><a title="Ver informacion" data-placement="top"
-                                            data-toggle="tooltip" class="tooltips" href="/links/Clases/{{id}} "
+                                            data-toggle="tooltip" class="tooltips" href="/links/AcademiaInfo/{{id}} "
                                             data-original-title="Ver"><i class="fa fa-info"></i></a></li>
                                 </ul>
                                 <div class="col mt-4">
