--- a/src/views/links/UpdateStudent.hbs
+++ b/src/views/links/UpdateStudent.hbs
@@ -8,11 +8,11 @@
 
                 <div class="col">
                     <h6><label>Nombre</label></h6>
-                    <input name="nombre" type="text" class="form-control" value="{{student.nombre}}">
+                    <input name="nombre" type="text" class="form-control" value="{{student.nombre}}"/>
                 </div>
                 <div class="col mr-4">
                     <h6><label>Apellidos</label></h6>
-                    <input name="apellido" type="text" class="form-control" value="{{student.apellido}}">
+                    <input name="apellido" type="text" class="form-control" value="{{student.apellido}}"/>
                 </div>
             </div>
             <div class="row mt-3 ml-4">
